fixed the spacing of the projects in projects section

--- a/style.css
+++ b/style.css
@@ -1457,7 +1457,7 @@ footer p {
   }
 
   .featured-project-name-wrapper {
-    margin: 6rem 0 4rem 0;
+    margin: 4rem 0 4rem 0;
   }
 
   .featured-project-name {
